--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner container-flexibility">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="name">Fahad Kibria</span> World!</h1>
-            <h3>I am a professional Web-developer</h3>
+            <h3>I am a professional Web-designer</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit esse excepturi enim, assumenda hic cumque sunt architecto nihil incidunt illo numquam. Perspiciatis impedit quam eveniet, officiis nulla esse ea eligendi incidunt, modi voluptate voluptatem illo aliquid non possimus atque dolores.</p>
             <a class="btn" target="blank" href="https://www.facebook.com/profile.php?id=100007037043156">Hire Me</a>
         </div> 
@@ -23,5 +23,34 @@
             <img src="images/208848179_1698099853707254_3062834289338638153_n-removebg-preview (1).png" alt="">
         </div>
     </section>
+    <section class="dream-area container-flexibility">
+        <div class="half-width">
+           <img src="images/45.png" alt=""> 
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Web-developer</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="btn" target="blank" href="https://www.facebook.com/profile.php?id=100007037043156">Download Resume</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="container-flexibility">
+            <div id="full" class="developer ">
+                <h1>Full Stack Web Developer</h1>
+                <h4 class="name">2021-Present | Pro Level Developer</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="baby" class="developer">
+                <h1>Baby Web Developer</h1>
+                <h4 class="name">2021-Present | Programming Hero Learner</h4>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>Fahad Kibria || 2021</p>
+    </footer>
 </body>
 </html>
